[gd_scene load_steps=3 format=3 uid="uid://bphta8ttccbeb"]

[ext_resource type="Script" path="res://Scripts/item_stack.gd" id="1_v1lnu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b5mmd"]
radius = 8.0

[node name="item_stack" type="Area2D"]
script = ExtResource("1_v1lnu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_b5mmd")

[node name="item_icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
